fix: toList 변경